# MediaCloud

./: .gitignore  CMakeLists.txt  LICENSE  MediaCloud.kdev4  Readme.md  client_main.cpp  main.cpp  server_main.cpp
.kdev4/: MediaCloud.kdev4
mcloud/: CMakeLists.txt  MediaCloudAudioPlayer.cpp  MediaCloudAudioPlayer.h  MediaCloudAudioProvider.cpp  MediaCloudAudioProvider.h  MediaCloudClient.cpp  MediaCloudClient.h  MediaCloudDatabase.cpp  MediaCloudDatabase.h  MediaCloudDecoder.cpp  MediaCloudDecoder.h  MediaCloudFilesystem.cpp  MediaCloudFilesystem.h  MediaCloudLanguageProvider.cpp  MediaCloudLanguageProvider.h  MediaCloudServer.cpp  MediaCloudServer.h  MediaCloudSettings.cpp  MediaCloudSettings.h  MediaCloudUtils.cpp  MediaCloudUtils.h  MediaCloudUtils.hpp
mcloud/security/: CMakeLists.txt  MediaCloudLoginProvider.cpp  MediaCloudLoginProvider.h  MediaCloudPermissionProvider.cpp  MediaCloudPermissionProvider.h
